Update css to improve category font size, add extensions to version control

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,6 +1,9 @@
 /* css styles */
 
 .navbar-nav .nav-link {
-    font-size: 1.0rem; /* Adjust this value as needed (e.g., 16px, 1.2em) */
+    font-size: 1.0rem; 
 }
 
+.category {
+    font-size: 0.8rem; 
+    }
